# pDomovoy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cmake.template  hello_world.c
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
3d_models/warden/: top_cover_mk2.stl
cmake/: client.cmake  jammer.cmake  server.cmake  station.cmake
configuration_files/: pd_common_config.h.in
modules/common/: CMakeLists.txt
modules/common/includes/: btstack_config.h  lwipopts.h
modules/common/includes/pdomovoy_common/: bluetooth.h  button.h  defines.h  helpers.h  math.h  pwm.h  types.h  version.h  voltmeter.h
modules/common/src/: bluetooth.c  button.c  debug_print.c  helpers.c  math.c  pwm.c  queue.c  voltmeter.c
modules/jammer/: jammer.cmake
modules/jammer/includes/: acceleration_readings.h  button.h  buzzer.h  callbacks.h  core_0.h  core_1.h  defines.h  delegates.h  globals.h  handlers.h  led_blink.h  types.h  version.h
modules/jammer/src/: callbacks.c  delegates.c  globals.c  handlers.c  led_blink.c  main.c
modules/jammer/src/cores/: core_0.c  core_1.c
modules/jammer/src/utils/: acceleration_readings.c  button.c  buzzer.c  debug_print.c  led_blink.c  pwm.c
modules/station/: station.cmake
modules/station/src/: main.c
modules/trumpet/: trumpet.cmake
modules/trumpet/gatt/: test_gatt.gatt  trumpet_core_gatt.gatt
modules/trumpet/includes/: bluetooth.h  callbacks.h  core_0.h  defines.h  display.h  globals.h  i2c_devices.h  pages.h  types.h
modules/trumpet/includes/bitmaps/: battery_icon.h  bell_icon.h  bell_icon_big.h  celcius_degree_icon.h  humidity_icon.h  thermometer_icon.h  top_bar.h
modules/trumpet/includes/bluetooth/: core.h  globals.h  handlers.h  helpers.h
modules/trumpet/includes/page_handlers/: handle_home_page.h  handle_time_stats_page.h  handle_versions_page.h  page_env_sensors.h
modules/trumpet/src/: bluetooth.c  callbacks.c  display.c  globals.c  i2c_devices.c  main.c  pages.c  voltmeter.c
modules/trumpet/src/bluetooth/: core.c  globals.c  handlers.c  helpers.c
modules/trumpet/src/cores/: core_0.c
modules/trumpet/src/page_handlers/: handle_home_page.c  handle_time_stats_page.c  handle_versions_page.c  page_env_sensors.c
modules/trumpet/src/utils/: display.c  i2c_devices.c  voltmeter.c
modules/warden/: warden.cmake
modules/warden/includes/: acceleration_readings.h  bluetooth.h  button.h  callbacks.h  core_0.h  core_1.h  debug_print.h  defines.h  delegates.h  globals.h  led_blink.h  pwm.h  queue.h  types.h  version.h  voltmeter.h
modules/warden/includes/bluetooth/: client_handlers.h  core.h  globals.h  handlers.h  hci_handlers.h  helpers.h  types.h
modules/warden/src/: bluetooth.c  callbacks.c  delegates.c  globals.c  main.c  queue.c
modules/warden/src/bluetooth/: client_handlers.c  core.c  globals.c  handlers.c  hci_handlers.c  helpers.c
modules/warden/src/cores/: core_0.c  core_1.c
modules/warden/src/utils/: acceleration_readings.c  button.c  led_blink.c  voltmeter.c
resources/3d_models/trumpet/: bottom_mk1.stl  top_mk1.stl
resources/3d_models/warden/: case_mk2.stl
src/: client.c  jammer.c  server.c
src/jammer/: main.c
station/src/: main.c
